--- a/src/css/base.css
+++ b/src/css/base.css
@@ -15,6 +15,8 @@ body {
 }
 
 main.content {
+    position: relative;
+    width: 100%;
     max-width: 1200px;
     margin: 1rem auto;
     padding: 2rem;
