--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,26 +1,30 @@
 .header {
-    background-color: var(--secondary);
-    color: var(--white);
-    padding: 1rem;
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-    box-shadow: 0 2px 4px var(--shadow);
+  background-color: var(--secondary);
+  color: var(--white);
+  padding: 1rem;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  box-shadow: 0 2px 4px var(--shadow);
 }
 
 .header-container {
-    max-width: 1200px;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.header-container h1{
+color: white;
 }
 
 .logo {
-    width: 40px;
-    margin-right: 1rem;
+  width: 80px;
+  border-radius: 50%;
+  margin-right: 1rem;
 }
 
 .user-info {
-    font-size: 0.9rem;
+  font-size: 0.9rem;
 }
